--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,7 +32,7 @@ jobs:
         python sofas.py
         ls -al
     - name: Upload datasets
-      uses: jaimevalero/push-kaggle-dataset@v1.0.3 # This is the action
+      uses: jaimevalero/push-kaggle-dataset@v1
       env:
         # Do not leak your credentials.
         KAGGLE_USERNAME: ${{ secrets.KAGGLE_USERNAME }}
