--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,6 +1,3 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
-
 name: Publish data
 
 on:
@@ -22,6 +19,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+    - run: |
+        mkdir ~/.kaggle
+        echo $KAGGLE_JSON > ~/.kaggle/kaggle.json
+        chmod 600 /home/sal/.kaggle/kaggle.json
+      env:
+        KAGGLE_JSON: ${{secrets.KAGGLE_JSON}}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -38,7 +41,7 @@ jobs:
         KAGGLE_USERNAME: ${{ secrets.KAGGLE_USERNAME }}
         KAGGLE_KEY: ${{ secrets.KAGGLE_KEY }}
       with:
-        id: "jaimevalero/my-new-dataset"
+        id: "salimfadhley/sofaloogy_clearance"
         title: "Sofaology clearance stock"
         subtitle: "Sofas on sale in the UK"
         description: "These are all the sofas currently on sale at Sofaology in the UK"
