--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,11 +19,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
-    - run: |
+    - name: Set up the environment
+      run: |
         cd
         mkdir .kaggle
         ls -al
-        echo $KAGGLE_JSON > ~/.kaggle/kaggle.json
+        echo "$KAGGLE_JSON" > ~/.kaggle/kaggle.json
         chmod 600 /home/sal/.kaggle/kaggle.json
       env:
         KAGGLE_JSON: ${{secrets.KAGGLE_JSON}}
